# multiple_wave_transport

./: CMakeLists.txt  calculate_and_save_loss_times.py  pend.py  process_loss_data.py  setup.py  tws.py  wavepacket_c.py
applications/pendulum/: calc1.py  calc2.py  calc3.py  calc4.py  calc5.py  calc_low_freq1.py  calc_low_freq2.py  calc_low_freq3.py  calc_low_freq4.py  calc_low_freq5.py  calculate_and_save_loss_times.py  calculate_diffusion.py  pend.py  plot_estimated_parameters.py  process_diffusion_distances.py  process_loss_data.py
applications/three_wave/: generate_figures.py  plot_estimated_parameters.py  process_loss_data.py  tws.py
src/: bind_integrator.cpp  bind_pendulum.cpp  bind_three_wave_system.cpp  bind_wavepacket.cpp  bindings.cpp  helper_collections.cpp  helper_collections.hpp  multiple_wave_system.cpp  multiple_wave_system.hpp  perturbed_pendulum.cpp  perturbed_pendulum.hpp  type_definitions.hpp  wavepacket.cpp
src/multiple_wave_transport/: __init__.py  dynamics.py  losses.py  math.py  pendulum.py
tests/: test_basic.py
